# glance

./: .gitignore  README.md  install.sh  requirements.txt
data/: ziyaadsmada.json  ziyaadsmada.pkl
glance/: Cargo.toml  README.md  io.github.glance.Glance.yml  meson.build
glance/data/: glance.gresource.xml  io.github.glance.Glance.desktop  io.github.glance.Glance.metainfo.xml  style.css
glance/data/ui/: add-face-dialog.blp  ir-setup-dialog.blp  preferences.blp  window.blp
glance/pam/: meson.build
glance/scripts/: cargo-build.sh
glance/src/: app.rs  camera.rs  face.rs  main.rs  models.rs  storage.rs  window.rs
glance/src/widgets/: face_guide.rs  mod.rs
pam-glance/: Cargo.toml  README.md  build.sh  download_models.sh  install.sh
pam-glance/src/: auth.rs  camera.rs  config.rs  face.rs  ir_emitter.rs  lib.rs
