[package]
name = "glance"
version = "1.0.0"
edition = "2021"
authors = ["Glance Team"]
description = "Windows Hello-style facial recognition for Linux"
license = "GPL-3.0"
repository = "https://github.com/glance-linux/glance"
keywords = ["facial-recognition", "authentication", "linux", "pam", "gtk4"]
categories = ["authentication", "gui"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
async-channel = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
opencv = { version = "0.92", default-features = false, features = ["videoio", "imgproc", "objdetect"] }
dlib-face-recognition = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
users = "0.11"
dirs = "5.0"
ureq = { version = "2.9", features = ["native-tls"] }
bzip2 = "0.4"

[build-dependencies]
glib-build-tools = "0.20"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
