[package]
name = "pam-glance"
version = "1.0.0"
edition = "2021"
authors = ["Glance Team"]
description = "Native PAM module for facial recognition authentication"
license = "GPL-3.0"
repository = "https://github.com/glance-linux/glance"

[lib]
name = "pam_glance"
crate-type = ["cdylib"]

[dependencies]
pam = { version = "0.8", features = ["module"] }
dlib-face-recognition = "0.3"
opencv = { version = "0.92", features = ["videoio", "imgproc", "highgui"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
syslog = "7.0"
anyhow = "1.0"
thiserror = "2.0"
dirs = "5.0"
libc = "0.2"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "time", "sync"] }

[build-dependencies]
pkg-config = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
